fixing height on blog-post iframe on mobile

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -327,6 +327,7 @@ a:focus {
   .blog-post {
     iframe {
       width: 100%;
+      height: 300px;
     }
   }
 }
